Might need to use some sort of custom submit

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>forest</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Runogeneraattori</title>
   </head>
   <body>
     <div id="app"></div>
