More or less ok

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <title>Runogeneraattori</title>
   </head>
   <body>
+    <nav class="menu">
+      <div class="container">
+        <div class="row">
+          <div class="ten columns">
+            <h2>Luontoruno</h2>
+            <a href="/galleria" class="pull-right">Selaa valmiita tuotoksia</a>
     <div id="app"></div>
     <script src='./static/fabric.js'></script>
-    <!-- built files will be auto injected -->
+    <!-- <script src='./static/spark-md5.js'></script> -->
   </body>
 </html>
