Todo: error handling, user title / credit submission, local storage, template images to aws

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <nav class="menu">
       <div class="container">
         <div class="row">
-          <div class="ten columns">
+          <div class="six columns">
             <h2>Luontoruno</h2>
-            <a href="/galleria" class="pull-right">Selaa valmiita tuotoksia</a>
+          </div>
+          <div class="six columns">
+            <a href="/galleria" class="pull-right m-t">Selaa valmiita tuotoksia</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div id="app"></div>
     <script src='./static/fabric.js'></script>
-    <!-- <script src='./static/spark-md5.js'></script> -->
   </body>
 </html>
