--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h2>Luontoruno</h2>
           </div>
           <div class="six columns">
-            <a href="/galleria" class="pull-right m-t">Selaa valmiita tuotoksia</a>
+            <a href="/galleria" class="pull-right m-t">Selaa runoja</a>
           </div>
         </div>
       </div>
