New backgrounds and english language gallery

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <h2>Luontoruno</h2>
           </div>
           <div class="six columns">
-            <a href="/galleria" class="pull-right m-t">Selaa runoja</a>
+            <a href="/galleria" class="pull-right m-t m-r">Selaa runoja</a>
+            <a href="/gallery" class="pull-right m-t m-r">Poems in english</a>
           </div>
         </div>
       </div>
