WIP, gallery endpoint deduplicate, adding about

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Runogeneraattori</title>
-  </head>
-  <body>
-    <nav class="menu">
-      <div class="container">
-        <div class="row">
-          <div class="six columns">
-            <h2>Luontoruno</h2>
-          </div>
-          <div class="six columns">
-            <a href="/galleria" class="pull-right m-t m-r">Selaa runoja</a>
-            <a href="/gallery" class="pull-right m-t m-r">Poems in english</a>
-          </div>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Runogeneraattori</title>
+</head>
+<body>
+  <nav class="menu">
+    <div class="container">
+      <div class="row">
+        <div class="six columns">
+          <h2>Luontoruno</h2>
+        </div>
+        <div class="six columns">
+          <a href="/galleria" class="pull-right m-t m-r">Selaa runoja</a>
+          <a href="/galleria?lang=en" class="pull-right m-t m-r">Poems in english</a>
         </div>
       </div>
-    </nav>
-    <div id="app"></div>
-    <script src='./static/fabric.js'></script>
-  </body>
+    </div>
+  </nav>
+  <div id="app"></div>
+  <script src='./static/fabric.js'></script>
+</body>
 </html>
